--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,1 +1,89 @@
+.lesson-four-task-one:hover{
+ color: red;
+ background: yellow;
+}
 
+.lesson-four-task-two :hover{
+ background: green;
+}
+
+.lesson-four-task-three :visited{
+ color: yellow;
+}
+
+.lesson-four-task-four:link{
+ color: red;
+}
+
+.lesson-four-task-five:active{
+ background: blue;
+}
+
+.lesson-four-task-six button:focus{
+ background: rgb(202, 131, 24);
+ color:rgb(255, 94, 0);
+}
+
+.lesson-four-task-seven #target:target{
+ color: aliceblue;
+ background: greenyellow;
+}
+
+.lesson-four-task-eight.input[type="checkbox"]:checked #target{
+ color: aliceblue;
+ background: rgb(14, 118, 167);
+}
+
+.lesson-four-task-nine p:lang(uk){
+ color:blue;
+}
+
+.lesson-four-task-ten input:enabled{
+ color: red;
+ background: yellow;
+}
+
+.lesson-four-task-eleven input:disabled{
+ background: yellow;
+}
+
+.lesson-four-task-twelve input:read-write{
+ background: yellow;
+}
+
+.lesson-four-task-thirteen input:read-only{
+ background: yellow;
+}
+
+.lesson-four-task-fourteen input:valid{
+ background: green;
+}
+
+.input:invalid{
+ background: red;
+}
+
+.lesson-four-task-fifteen input:optional{
+ background: red;
+}
+
+.lesson-four-task-sixteen input:out-of-range{
+ color:red;
+}
+
+.lesson-four-task-seventeen input:in-range{
+ color:green;
+}
+
+.lesson-four-task-eighteen input:placeholder-shown{
+ background: red;
+}
+
+.lesson-four-task-nineteen button:focus-within{
+ color:aliceblue;
+ background: yellow;
+}
+
+.lesson-four-task-twenty input:invalid{
+ background: red;
+}
